--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,16 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <app-header></app-header>
 <br>
 <div class="container-fluid">
     <router-outlet></router-outlet>  
   </div>
+<!--
+
+  <footer>
+    <p>&copy; smart class 2021 </p>
+  </footer>
+  -->
