--- a/src/app/authentification/signup/signup.component.html
+++ b/src/app/authentification/signup/signup.component.html
@@ -1,4 +1,4 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
 <div class="row">
@@ -44,7 +44,7 @@
 <div class="form-check-inline">
     <label class="form-check-label" for="radio2">
         <input type="radio" id="radio2" 
-        class="form-control" class="form-check-input" 
+        class="form-control" class="form-check-input" formControlName="sexe" 
         name="optradio" value="homme" >
         Homme
     </label>
@@ -88,7 +88,7 @@
         </div>
     </div>
     <br>
-    <button class="btn btn-primary" type="submit" [disabled]="signupForm.invalid">Créer compte</button>
+    <button class="btn btn-primary" type="submit"  [disabled]="signupForm.invalid">Créer compte</button>
 </fieldset>
 </form>
 <br>
@@ -96,6 +96,67 @@
 </div>
 </div>
 
+ -->
 
 
-  
+ <div class="container-fluid px-1 py-5 mx-auto">
+    <div class="row d-flex justify-content-center">
+        <div class="col-xl-5 col-lg-7 col-md-8 col-5 text-center">
+   
+            <div class="card">
+                <h5 class="text-center mb-4">Create an account</h5>
+                <form class="form-card" [formGroup]="signupForm" (ngSubmit)="onCreate()">
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-5 flex-column d-flex"> <label for="fname" class="form-control-label px-3">First name<span class="text-danger"> *</span></label> <input type="text" id="fname"  class="form-control" formControlName="fname"> </div>
+                        <div class="form-group col-sm-5 flex-column d-flex"> <label for="lname" class="form-control-label px-3">Last name<span class="text-danger"> *</span></label> <input type="text" id="lname" class="form-control" formControlName="lname"> </div>
+                    </div>
+                     <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-5 flex-column d-flex"> <label for="birthDate" class="form-control-label px-3">Date of birth<span class="text-danger"> *</span></label>  <input type="date" id=" birthDate"  class="form-control" formControlName="birthDate"> </div>
+                        <div class="form-group col-sm-5 flex-column d-block"> <label for="sexe" class="form-control-label px-3">Sexe<span class="text-danger"> *</span></label>
+                        <br>
+                             <div class="form-check-inline">
+        <label class="form-check-label" for="radio1" >
+    <input type="radio" id="radio1" class="form-control"  
+    class="form-check-input" formControlName="sexe" 
+    name="optradio" value="femme" >
+    Femme
+</label>
+</div>
+<div class="form-check-inline">
+    <label class="form-check-label" for="radio2">
+        <input type="radio" id="radio2" 
+        class="form-control" class="form-check-input" formControlName="sexe" 
+        name="optradio" value="homme" >
+        Homme
+    </label>
+</div>
+ </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-5 flex-column d-flex"> <label for="niveau" class="form-control-label px-3">Education level <span class="text-danger"> *</span></label> <select class="selectpicker" class="form-control" id="niveau" name="niveau" formControlName="niveau">
+        <option>Bac</option>
+        <option>Licence</option>
+        <option>Master</option>
+        <option>Cycle d'ingénieur</option>
+    </select>
+ </div>
+                        <div class="form-group col-sm-5 flex-column d-flex"> <label for="specialite" class="form-control-label px-3">Specialite<span class="text-danger"> *</span></label> <input type="text" id="specialite" class="form-control" formControlName="speacialite"> </div>
+                    </div>
+
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-5 flex-column d-flex"> <label class="form-control-label px-3">Email <span class="text-danger"> *</span></label> <input type="text" id="email" class="form-control" formControlName="email"> </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-5 flex-column d-flex"> <label class="form-control-label px-3">Password<span class="text-danger"> *</span></label> <input type="password" id="password" class="form-control" formControlName="password"> </div>
+                    </div>
+                    <div class="row justify-content-end">
+                        <div class="form-group col-sm-5"> <button type="submit" class="btn-block btn-primary" [disabled]="signupForm.invalid">Create account</button> </div>
+                    </div>
+                </form>
+                <br>
+                <p class="text-danger"> {{errorMessage}}</p>
+
+            </div>
+        </div>
+    </div>
+</div>
