--- a/src/app/authentification/signin/signin.component.html
+++ b/src/app/authentification/signin/signin.component.html
@@ -1,37 +1,51 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
-<div class="row">
-        <div style="padding-top: 60px; padding-left:900px;" class="col-sm-8 col-sm-offset-2">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" /> -->
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 
-        <h2 class="display-5" style="padding-left:170px ; font-family: 'Roboto', sans-serif; color: #134e6f;">Connexion</h2>
-        <br>
-        <form class="row row-cols-1" [formGroup]="signinForm" (ngSubmit)="onConnexion()">
-            <fieldset class="border p-5">
 
-        <div class="form-group">
-                <label style="font-size:25px;" for="email">Adresse email :</label>
-                <div class="col-sm-4">
-                <input type="text" id="email" 
-                class="form-control" formControlName="email">
-            </div>
-            </div>
-            <div class="form-group">
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+<div class="container">
+    <div class="row">
+      <div style="padding-top: 30px; ;" class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card border-0 shadow rounded-3 my-5">
+          <div class="card-body p-4 p-sm-5">
+            <h5  class="card-title text-center mb-5 fw-light fs-5" >Sign In</h5>
 
-                <label style="font-size:25px;" for="password">Mot de passe :</label> 
-                <div class="col-sm-4">
 
-                <input type="password" id="password" class="form-control"
-                formControlName="password">
-                </div>
-            </div>
-            <p class="text-body">Si vous n'avez pas un compte, <a href="auth/signup"> inscrivez vous.</a></p>
 
-        <button class="btn btn-primary"
-        [disabled]="signinForm.invalid">Se connecter</button>
-            </fieldset>
-    </form>
-<br>
-<p class="text-danger">{{errorMessage}}</p>
+            <form  [formGroup]="signinForm" (ngSubmit)="onConnexion()">
+              <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="email" placeholder="name@example.com" formControlName="email">
+                <label for="email">Email address</label>
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+
+              </div>
+              <div class="form-floating mb-3">
+                <input type="password" class="form-control" formControlName="password" id="password" placeholder="Password">
+                <label for="password">Password</label>
+              </div>
+
+              <div class="form-check mb-3">
+                <p class="text-body">Si vous n'avez pas un compte, <a href="auth/signup"> inscrivez vous.</a></p>
+
+              </div>
+              <div class="d-grid">
+                <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
+                  in</button> 
+              </div>
+            
+            </form>
+            <br>
+            <p class="text-danger">{{errorMessage}}</p>
+
+          </div>
         </div>
-</div>
+      </div>
+    </div>
+  </div>
+
+
+
+  
+
+ 
