--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,52 +1,63 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a style="padding-left: 20px; padding-right:50px" class="navbar-brand" href="#">
-            <img src="../assets/logo.jpg" width="30" height="30"  alt="">
-            Smart Class 
-          </a> 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li routerLinkActive="active">
-            <a routerLink="home" style="padding-left: 40px; padding-right:50px " class="nav-link" aria-current="page" href="#">Home</a>
-          </li>
-          <li routerLinkActive="active">
-            <a routerLink="courses" style="padding-left: 40px; padding-right:50px " class="nav-link " aria-current="page"  href="#">Our courses</a>
-          </li>
-          
-          <li class="nav-item">
-            <a style="padding-left: 40px; padding-right:50px " class="nav-link " href="#" tabindex="-1" aria-current="page" >About us</a>
-          </li>
-          <li class="nav-item">
-            <a style="padding-left: 40px; padding-right:400px " class="nav-link " href="#" tabindex="-1" aria-current="page">Support</a>
-          </li>
-          
-        <form class="d-flex">
-          
-            <input style="padding-left: 50px; padding-right:50px " class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-           
-            <button  class="btn btn-outline-secondary"  type="submit">
-                <img style="height:25px; width:25px;" src="../assets/search.png">
+<nav class="navbar navbar-light ms-auto  bg-light fixed-top navbar-expand-md">
 
-
-            </button>
-          </form>
-        </ul>
-
-      </div>
+  <a style="padding-left: 20px; padding-right:50px" class="navbar-brand" href="#">
+    <img src="../assets/logo.jpg" width="30" height="30"  alt="">
+     Smart Class 
+  </a> 
       
-    </div>
-    <ul class="nav navbar-nav navbar-right">
+  <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar">
+   <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <li class="nav-item dropdown">
-        <a style="padding-right:80px ;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-        Compte
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li routerLinkActive="active"><a *ngIf="!isAuth" routerLink="auth/signin" class="dropdown-item" href="#">Se connecter</a></li>
-          <li routerLinkActive="active"><a *ngIf="!isAuth" routerLink="auth/signup" class="dropdown-item" href="#">Créer un compte</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li routerLinkActive="active"><button *ngIf="isAuth" class="dropdown-item" (click)="onSignOut()">Déconnexion</button></li>
-        </ul>
+  <div class="collapse navbar-collapse" id="navbar">
+            
+    <ul class="navbar-nav">
+
+      <li routerLinkActive="active">
+            <a  routerLink="home" style="padding-left: 40px; padding-right:50px " class="nav-link" aria-current="page" href="#">Home</a> 
       </li>
-      </ul>
-  </nav>
+          
+      <li routerLinkActive="active">
+        <a routerLink="courses" style="padding-left: 40px; padding-right:50px " class="nav-link " aria-current="page"  href="#">Our courses</a>
+      </li>
+          
+      <li routerLinkActive="active">
+        <a routerLink="liste" style="padding-left: 40px; padding-right:50px " class="nav-link " href="#" aria-current="page" >About us</a>
+      </li>
+
+      <li routerLinkActive="active">
+        <a routerLink="courses/new" style="padding-left: 40px; padding-right:400px " class="nav-link " href="#" tabindex="-1" aria-current="page">Support</a>
+      </li>
+
+      <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+        <div class="input-group">
+          <input type="search" class="form-control bg-light border-1 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="button">
+                  <i class="fa fa-search" aria-hidden="true"></i>
+                </button>
+            </div>
+        </div>
+      </form>
+           
+    <div style="padding-left: 16.5cm;" class=" navbar-nav navbar-right">
+
+      <li style=" padding-right: 1.5cm;" class="nav-item dropdown">
+        <a   class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+        My account 
+        </a> 
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li routerLinkActive="active"><a *ngIf="!isAuth" routerLink="auth/signin" class="dropdown-item" href="#">Login <i style="padding-left:5px ;" class="fa fa-sign-in " aria-hidden="true"></i></a></li>
+          <li routerLinkActive="active"><a *ngIf="!isAuth" routerLink="auth/signup" class="dropdown-item" href="#">Sign Up<i style="padding-left: 8px;" class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li routerLinkActive="active"><button *ngIf="isAuth" class="dropdown-item" (click)="onSignOut()">Sign Out<i style="padding-left: 5px;" class="fa fa-sign-out"></i>
+          </button></li>
+        </ul>
+
+      </li>
+          
+    </div>
+     </ul>
+  </div>
+</nav>          
+
