--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,30 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
-   
-   <div style="padding-top: 60px;" class="container">
-              <img  style="height:729px;position:absolute; width:920px;right:60px ; border-radius: 14px; padding-top: 0px;
-              " src="../assets/hoome.png">
-</div>
-<div style="padding-top: 150px; padding-left:80px;" class="float-left">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-6 col-md-8 col-sm-9">
+            <div style="padding-top: 150px; padding-left:80px;" class="float-left">
+    
+            <h3 class="display-4" style=" font-family: 'Roboto', sans-serif; color: #134e6f; ;">Get the best resources and courses </h3>
+            <h3 class="display-4" style=" font-family: 'Roboto', sans-serif;  color: #134e6f; ">build your career in a </h3>
+            <h3 class="display-4" style=" font-family: 'Roboto', sans-serif; color: #134e6f;">professional way</h3>
+            <br>
+            <h6 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 30px; color:black;">Prominent access to many resources ranging from</h6>
+            <h6 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 30px; color: black;"> courses,articles,etc.</h6>
+            <br>
+    
+            <br>
+            <button *ngIf="!isAuth" (click)="onAccess()" class="brtn btn-sm" style="border-radius: 15px; padding-right:60px; padding-left:60px; padding-top:10px; padding-bottom:10px; background-color:#1AC0C6; color: white; border-color: #1AC0C6; font-size: 30px;">Get Access</button>
+            </div>
+        </div>
+        <div class="col-lg-6 col-md-4 col-sm-3">
+            <div style="padding-top: 60px;" >
+                <img class="img-fluid" alt="Responsive image"  style="height:729px; width:920px;right:60px ; border-radius: 14px; padding-top: 0px;
+                " src="../assets/hoome.png">
+            </div>
+        </div>
 
-    <h3 class="display-4" style=" font-family: 'Roboto', sans-serif; color: #134e6f; ;">Get the best resources and courses </h3>
-    <h3 class="display-4" style=" font-family: 'Roboto', sans-serif;  color: #134e6f; ">build your career in a </h3>
-    <h3 class="display-4" style=" font-family: 'Roboto', sans-serif; color: #134e6f;">professional way</h3>
-    <br>
-    <h6 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 30px; color:black;">Prominent access to many resources ranging from</h6>
-    <h6 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 30px; color: black;"> courses,articles,etc.</h6>
-<br>
 
-<br>
-<button *ngIf="!isAuth" (click)="onAccess()" class="brtn btn-sm" style="border-radius: 15px; padding-right:60px; padding-left:60px; padding-top:10px; padding-bottom:10px; background-color:#1AC0C6; color: white; border-color: #1AC0C6; font-size: 30px;">Get Access</button>
+    </div>
 </div>
