--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <app-header></app-header>
@@ -13,9 +5,9 @@
 <div class="container-fluid">
     <router-outlet></router-outlet>  
   </div>
-<!--
+<br>
+<br>
+<footer style="margin-top: 50px;" class="w-100 py-4 flex-shrink-0">
+  <app-footer> </app-footer>
 
-  <footer>
-    <p>&copy; smart class 2021 </p>
-  </footer>
-  -->
+</footer>
