--- a/src/app/authentification/signin/signin.component.html
+++ b/src/app/authentification/signin/signin.component.html
@@ -1,18 +1,10 @@
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" /> -->
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-
-
-<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 <div class="container">
     <div class="row">
-      <div style="padding-top: 30px; ;" class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+      <div style="padding-top: 90px; ;" class="col-sm-10 col-md-8 col-lg-5 mx-auto">
         <div class="card border-0 shadow rounded-3 my-5">
           <div class="card-body p-4 p-sm-5">
             <h5  class="card-title text-center mb-5 fw-light fs-5" >Sign In</h5>
-
-
-
             <form  [formGroup]="signinForm" (ngSubmit)="onConnexion()">
               <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="email" placeholder="name@example.com" formControlName="email">
@@ -20,17 +12,17 @@
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
 
               </div>
-              <div class="form-floating mb-3">
+              <div class="form-floating mb-4">
                 <input type="password" class="form-control" formControlName="password" id="password" placeholder="Password">
                 <label for="password">Password</label>
               </div>
 
-              <div class="form-check mb-3">
-                <p class="text-body">Si vous n'avez pas un compte, <a href="auth/signup"> inscrivez vous.</a></p>
+              <div class="form-check mb-4">
+                <p class="text-body">If you don't have an account, <a href="auth/signup"> register.</a></p>
 
               </div>
               <div class="d-grid">
-                <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
+                <button class="btn-block btn-outline-primary btn-login text-uppercase" type="submit" [disabled]="signinForm.invalid">Sign
                   in</button> 
               </div>
             
