--- a/src/app/authentification/signin/signin.component.scss
+++ b/src/app/authentification/signin/signin.component.scss
@@ -1,11 +1,38 @@
 
-  
   .btn-login {
     font-size: 0.9rem;
     letter-spacing: 0.05rem;
     padding: 0.75rem 1rem;
   }
 
+  .btn-block {
+    text-transform: uppercase;
+    font-size: 15px !important;
+    font-weight: 400;
+    height: 43px;
+    cursor: pointer
+}
 
+input,
+textarea,
+button {
+    padding: 10px 15px;
+    border-radius: 5px !important;
+    margin: 8px 0px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    font-size: 20px !important;
+    font-weight: 300
+}
 
-  
+.card {
+    padding: 40px 40px;
+    margin-top: 60px;
+    border: none !important;
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2)
+}
+
+.form-control-label {
+    margin-bottom: 0
+}
+
