--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,4 @@
 <nav class="navbar navbar-light ms-auto fixed-top  bg-light navbar-expand-md">
-
   <a style="padding-left: 20px; padding-right:50px" class="navbar-brand" href="#">
     <img src="../assets/logo.jpg" width="30" height="30"  alt="">
      Smart Class 
@@ -26,11 +25,13 @@
       </li>
 
       <li routerLinkActive="active">
-        <a routerLink="support" style="padding-left: 40px;  " class="nav-link " href="#" tabindex="-1" aria-current="page">Support</a>
+        <a routerLink="admin" style="padding-left: 40px;  " class="nav-link " href="#" tabindex="-1" aria-current="page">ADMIN</a>
       </li>
+
       <li routerLinkActive="active">
-        <a routerLink="courses/new" style="padding-left: 40px; padding-right:400px " class="nav-link " href="#" tabindex="-1" aria-current="page">New COurse</a>
+        <a routerLink="support" style="padding-left: 40px; padding-right: 10cm; " class="nav-link " href="#" tabindex="-1" aria-current="page">Support</a>
       </li>
+
       <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
         <div class="input-group">
           <input type="search" class="form-control bg-light border-1 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
